@@ -1,3 +1,7 @@
+2007-10-08  Alex Roitman  <shura@gramps-project.org>
+	* src/gen/lib/researcher.py (serialize, unserialize): Add methods; 
+	(set, get): Remove methods.
+
 2007-10-08  Don Allingham  <don@gramps-project.org>
 	* src/gen/lib/attrbase.py: renamed from attributeBase.py
 
